Closed
Bug 1341206
Opened 6 years ago
Closed 6 years ago
Crash in mozilla::dom::cache::db::`anonymous namespace''::Migrate
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
Tracking | Status | |
---|---|---|
firefox52 | --- | unaffected |
firefox-esr52 | --- | unaffected |
firefox53 | --- | fixed |
firefox54 | --- | fixed |
People
(Reporter: ting, Assigned: bkelly)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
1.17 KB,
patch
|
asuth
:
review+
gchang
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is report bp-a375191c-347c-4083-94f6-ca65d2170221. ============================================================= Top #8 of Aurora 20170219004014 on Windows, 15 crashes from 3 installations.
Reporter | ||
Updated•6 years ago
|
Flags: needinfo?(bkelly)
Assignee | ||
Comment 1•6 years ago
|
||
This reflects profiles being shared between nightly and aurora with incompatible cache schema versions. We could switch this back to a MOZ_ASSERT() since we also catch this condition and refuse to open storage. Do you mind trying this?
Flags: needinfo?(bkelly) → needinfo?(janus926)
Assignee | ||
Comment 2•6 years ago
|
||
Actually, I'm just going to go ahead and do this.
Assignee: nobody → bkelly
Blocks: ServiceWorkers-stability
Status: NEW → ASSIGNED
Flags: needinfo?(janus926)
Assignee | ||
Comment 3•6 years ago
|
||
Lets not crash release builds if they get a cache schema version mismatch. Our runtime checking will handle this.
Attachment #8839483 -
Flags: review?(bugmail)
Assignee | ||
Comment 4•6 years ago
|
||
This only affects nightly/aurora because its a MOZ_DIAGNOSTIC_ASSERT.
status-firefox52:
--- → unaffected
status-firefox53:
--- → affected
status-firefox-esr52:
--- → unaffected
Updated•6 years ago
|
Attachment #8839483 -
Flags: review?(bugmail) → review+
Pushed by bkelly@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/3ebff6b4a913 Relax Cache API schema version assertion since mismatches can happen in release profiles. r=asuth
Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 8839483 [details] [diff] [review] Relax Cache API schema version assertion since mismatches can happen in release profiles. r=asuth Approval Request Comment [Feature/Bug causing the regression]: Bug 1328686 converted a MOZ_ASSERT() into a MOZ_DIAGNOSTIC_ASSERT(). [User impact if declined]: Crashes when a user shared a profile across firefox channels with different Cache API schema versions. Normally we just refuse to open the storage system instead of crashing. [Is this code covered by automated tests?]: This kind of version mismatch is not tested as far as I know. [Has the fix been verified in Nightly?]: No. The schema version mismatch is really only triggered on aurora when it opens a profile that was upgraded to nightly. [Needs manual test from QE? If yes, steps to reproduce]: No [List of other uplifts needed for the feature/fix]: No [Is the change risky?]: No risk. [Why is the change risky/not risky?]: The patch simply converts a MOZ_DIAGNOSTIC_ASSERT() back to a MOZ_ASSERT(). We had this exact code for a long time before bug 1328686 changed it recently. [String changes made/needed]: None
Attachment #8839483 -
Flags: approval-mozilla-aurora?
Comment 7•6 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/3ebff6b4a913
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment 8•6 years ago
|
||
Comment on attachment 8839483 [details] [diff] [review] Relax Cache API schema version assertion since mismatches can happen in release profiles. r=asuth Fix a crash. Aurora53+.
Attachment #8839483 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Assignee | ||
Comment 9•6 years ago
|
||
remote: https://hg.mozilla.org/releases/mozilla-aurora/rev/e87493254cbe0c4e91e84ecb57f56d162c187c8c
Updated•6 years ago
|
Crash Signature: [@ mozilla::dom::cache::db::`anonymous namespace''::Migrate] → [@ mozilla::dom::cache::db::`anonymous namespace''::Migrate] [@ mozilla::dom::cache::db::CreateOrMigrateSchema ]
Updated•4 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•