Bug 1341206 Relax Cache API schema version assertion since mismatches can happen in release profiles. r=asuth a=gchang